# statemachine

./: .travis.yml  CMakeLists.txt  README.md  Vagrantfile  appveyor.yml
src/: examples.cpp  statemachine.h  unittests.cpp
tools/: darwin-clang-libc++.cmake  darwin.sh  linux-clang-libc++.cmake  linux-clang-libstdc++.cmake  linux-clang.sh  linux-gcc-libstdc++.cmake  linux.sh
